[package]
name = "kademlia"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
mio = "0.8"
tokio = { version = "1", features = ["full"] }
bytes = "1"
rand = "0.8"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
rand_chacha = "*"
